fixed images so they aren't stretched

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ body, html, #root, .App {
 .city img {
     width: 300px;
     height: 33vh;
+    object-fit: cover;
 }
 
 section {
